# teamy-robocopy

./: .gitignore  Cargo.toml
src/: lib.rs  logging.rs  main.rs
src/cli/: global_args.rs  json_log_behaviour.rs  mod.rs  to_args.rs
src/cli/command/: command.rs  mod.rs
src/cli/command/robocopy_logs_tui/: mod.rs  robocopy_logs_tui_args.rs
src/robocopy/: mod.rs  robocopy_file_pattern.rs  robocopy_header.rs  robocopy_log.rs  robocopy_log_entry.rs  robocopy_log_parser.rs  robocopy_options.rs  robocopy_start_datetime.rs
