[package]
name = "teamy-robocopy"
version = "0.1.0"
edition = "2024"
authors = ["TeamDman"]
description = "Standalone robocopy log parser and CLI utilities extracted from teamy-mft"
license = "MPL-2.0"
repository = "https://github.com/TeamDman/teamy-robocopy"
keywords = ["robocopy", "logs", "cli"]
categories = ["command-line-utilities", "file-system"]

[dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1.10.1"
directories = "5"
dunce = "1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
widestring = "1.2.0"
windows = { version = "0.62.0", features = [
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_Storage",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI",
    "Win32_System_Console",
] }
tokio = { version = "1.47.1", features = ["full"] }
strum = { version = "0.27.2", features = ["derive"] }
itertools = "0.10.5"
humansize = "2.1.3"
crossbeam-channel = "0.5"
rustc-hash = "2.1.1"
winstructs = "0.3.2"
rayon = { version = "1.10" }
humantime = "2.2.0"
thousands = "0.2.0"
nucleo = "0.5.0"
chrono = "0.4.41"
teamy-windows = "0.3.0"
tempfile = "3.20"
teamy-uom-extensions = "0.1.0"
uom = { version = "0.37.0", features = ["usize"] }
compact_str = "0.9.0"
mft = "0.6.1"
mimalloc = "0.1.48"
bytesize = "1.1.0"

[dev-dependencies]
tempfile = "3.20"

# Keep lints and dev profile from the original project for consistency
[profile.dev.package."*"]
opt-level = 3

[lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"

# Project-specific lint opt-outs
literal_string_with_formatting_args = "allow"
